@@ -1,3 +1,7 @@
+2020-10-24  Antonio Ceballos  <aceballos@gmail.com>
+
+	* Remove compilation warnings: unused variables, signed-unsigned
+
 2020-10-23  Simon Waters <simon@technocool.net>
 
 	* Avoid overlapping strings on 'pgnsave'
